eth user cmd tool complete. tests failed.

--- a/cmd/btc_user_cmd/example_config.yaml
+++ b/cmd/btc_user_cmd/example_config.yaml
@@ -7,4 +7,5 @@ BTC_CHAIN_CONFIG: "regtest" # mainnet, testnet
 BTC_CORE_ACCOUNT_PRIV: "cQthTMaKUU9f6br1hMXdGFXHwGaAfFFerNkn632BpGE6KXhTMmGY" # user's private key
 BTC_CORE_ACCOUNT_ADDR: "moHYHpgk4YgTCeLBmDE2teQ3qVLUtM95Fn" # user's address
 
-REGISTER_USER_ON_CHAIN: true # if local testing setup, true; if public btc node setup, false
+# Extra
+REGISTER_USER_ON_CHAIN: true # if in local testing setup, true; if public btc node setup, false
