--- a/cmd/server_cmd/cfg_testnet4_sepolia.yaml
+++ b/cmd/server_cmd/cfg_testnet4_sepolia.yaml
@@ -14,6 +14,7 @@ BTC_RPC_SERVER: "127.0.0.1"
 BTC_RPC_PORT: "5000"
 BTC_RPC_USERNAME: "qweruoiasvl123"
 BTC_RPC_PWD: "zxcvuoajflk"
+BTC_START_BLK: 70620
 BTC_CHAIN_CONFIG: "testnet" # mainnet, testnet
 BTC_CORE_ACCOUNT_ADDR: "mnQ9tBEkNXXEyJqKeSK1TWJV3LngVSjanV" # bridge's address (can receive deposit BTCs)
 BTC_CORE_ACCOUNT_PRIV: "cU78RfXmYEXsdNpiC8AppdpNg6Ni58s8nF8LFFWuMVAQGx51v3HY" # bridge's private key
